force-app/main/default/objects/LigneFacturation__c/LigneFacturation__c.object-meta.xml
<CustomObject>
    <label>Ligne de facturation</label>
    <nameField>
        <label>Ligne Facturation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes de facturation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>