force-app/main/default/objects/LigneFacturation__c/fields/Contrevaleur_montant_total_PEC__c.field-meta.xml
<CustomField>
    <fullName>Contrevaleur_montant_total_PEC__c</fullName>
    <formula>Montant_total_PEC_devises__c * Taux_change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrevaleur du montant total PEC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>