force-app/main/default/objects/LigneFacturation__c/fields/Contrevaleur_validee_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Contrevaleur_validee_Ebury__c</fullName>
    <formula>Montant_total_PEC_devises__c * Finance__r.Taux_de_change_valide_Ebury__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrevaleur validée Ebury</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>