force-app/main/default/objects/LigneFacturation__c/fields/Copaiement_devises__c.field-meta.xml
<CustomField>
    <fullName>Copaiement_devises__c</fullName>
    <formula>Montant_total_devises__c -  Montant_total_PEC_devises__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copaiement en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>