force-app/main/default/objects/LigneFacturation__c/fields/Date_heure_taux_change__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_taux_change__c</fullName>
    <label>Date et heure du taux de change</label>
    <type>DateTime</type>
</CustomField>