force-app/main/default/objects/LigneFacturation__c/fields/Detail_moyen__c.field-meta.xml
<CustomField>
    <fullName>Detail_moyen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Détail du moyen</label>
    <referenceTo>moyen_du_service__c</referenceTo>
    <relationshipLabel>Détail du moyen</relationshipLabel>
    <relationshipName>Lignes_facturation</relationshipName>
    <type>Lookup</type>
</CustomField>