force-app/main/default/objects/LigneFacturation__c/fields/Detail_moyen_frais_medicaux__c.field-meta.xml
<CustomField>
    <fullName>Detail_moyen_frais_medicaux__c</fullName>
    <label>Détail du moyen frais médicaux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accompagnant</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Autres services</fullName>
            </value>
            <value>
                <fullName>Bloc</fullName>
            </value>
            <value>
                <fullName>Chambre</fullName>
            </value>
            <value>
                <fullName>Forfait</fullName>
            </value>
            <value>
                <fullName>Frais de sejour</fullName>
                <label>Frais de séjour</label>
            </value>
            <value>
                <fullName>Home MED</fullName>
            </value>
            <value>
                <fullName>Honoraires</fullName>
            </value>
            <value>
                <fullName>Imagerie</fullName>
            </value>
            <value>
                <fullName>Implant_Prothese</fullName>
                <label>Implant / Prothèse</label>
            </value>
            <value>
                <fullName>Kine</fullName>
                <label>Kiné</label>
            </value>
            <value>
                <fullName>Laboratoire</fullName>
            </value>
            <value>
                <fullName>Molecule couteuse</fullName>
                <label>Molécule coûteuse</label>
            </value>
            <value>
                <fullName>Pharmacie</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
                <isActive>false</isActive>
                <label>Franchise</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>