force-app/main/default/objects/LigneFacturation__c/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devise</label>
    <referenceTo>devise__c</referenceTo>
    <relationshipLabel>Lignes de facturation</relationshipLabel>
    <relationshipName>Lignes_facturation</relationshipName>
    <type>Lookup</type>
</CustomField>