force-app/main/default/objects/LigneFacturation__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance</label>
    <referenceTo>facture_devis__c</referenceTo>
    <relationshipLabel>Lignes de facturation</relationshipLabel>
    <relationshipName>Lignes_facturation</relationshipName>
    <type>Lookup</type>
</CustomField>