force-app/main/default/objects/LigneFacturation__c/fields/Franchise_devises__c.field-meta.xml
<CustomField>
    <fullName>Franchise_devises__c</fullName>
    <label>Franchise en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>