force-app/main/default/objects/LigneFacturation__c/fields/Garantie_du_service__c.field-meta.xml
<CustomField>
    <fullName>Garantie_du_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantie</label>
    <referenceTo>garantie_du_service__c</referenceTo>
    <relationshipLabel>Lignes de facturation</relationshipLabel>
    <relationshipName>Lignes_de_facturation</relationshipName>
    <type>Lookup</type>
</CustomField>