force-app/main/default/objects/LigneFacturation__c/fields/Montant_total_devises__c.field-meta.xml
<CustomField>
    <fullName>Montant_total_devises__c</fullName>
    <label>Montant total en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>