force-app/main/default/objects/LigneFacturation__c/fields/Montant_total_PEC_devises__c.field-meta.xml
<CustomField>
    <fullName>Montant_total_PEC_devises__c</fullName>
    <formula>IF((ISNULL(Plafond_devises__c)|| (Plafond_devises__c==0)), Montant_total_devises__c  * Pourcentage_PEC__c,IF( Montant_total_devises__c&gt; Plafond_devises__c , Plafond_devises__c* Pourcentage_PEC__c, Montant_total_devises__c  * Pourcentage_PEC__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant total PEC en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>