force-app/main/default/objects/LigneFacturation__c/fields/Moyens__c.field-meta.xml
<CustomField>
    <fullName>Moyens__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moyen de la garantie</label>
    <referenceTo>moyen_garantie__c</referenceTo>
    <relationshipLabel>Lignes de facturation</relationshipLabel>
    <relationshipName>Lignes_de_facturation</relationshipName>
    <type>Lookup</type>
</CustomField>