force-app/main/default/objects/LigneFacturation__c/fields/Plafond_devises__c.field-meta.xml
<CustomField>
    <fullName>Plafond_devises__c</fullName>
    <label>Plafond en devises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>