force-app/main/default/objects/LigneFacturation__c/fields/Pourcentage_PEC__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_PEC__c</fullName>
    <label>Pourcentage de PEC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>