force-app/main/default/objects/LigneFacturation__c/fields/Quantite__c.field-meta.xml
<CustomField>
    <fullName>Quantite__c</fullName>
    <label>Quantité</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>