force-app/main/default/objects/LigneFacturation__c/fields/Taux_change__c.field-meta.xml
<CustomField>
    <fullName>Taux_change__c</fullName>
    <label>Taux de change</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>