force-app/main/default/objects/LigneFacturation__c/fields/TECH_Garantie__c.field-meta.xml
<CustomField>
    <fullName>TECH_Garantie__c</fullName>
    <label>TECH_Garantie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>