force-app/main/default/objects/LigneFacturation__c/fields/TECH_Moyen__c.field-meta.xml
<CustomField>
    <fullName>TECH_Moyen__c</fullName>
    <label>TECH_Moyen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>