force-app/main/default/objects/LigneFacturation__c/recordTypes/Assistance.recordType-meta.xml
<RecordType>
    <fullName>Assistance</fullName>
    <active>true</active>
    <label>Assistance</label>
</RecordType>