force-app/main/default/objects/LigneFacturation__c/recordTypes/Frais_medicaux.recordType-meta.xml
<RecordType>
    <fullName>Frais_medicaux</fullName>
    <active>true</active>
    <label>Frais médicaux</label>
</RecordType>